--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ nav a:hover {
 }
 
 .banner {
-    background: #eaeaea url("https://images.unsplash.com/photo-1519337265831-281ec6cc8514?auto=format&fit=crop&w=1200&q=80") center/cover;
+    background: #eaeaea url("./pedro castilho (3).png") center/cover;
     text-align: center;
     padding: 60px 0 40px 0;
     color: #19335a;
