--- a/style.css
+++ b/style.css
@@ -46,10 +46,12 @@ nav a:hover {
 }
 .banner h2 {
     font-size: 2.2rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .banner p {
     margin-top: 12px;
     font-size: 1.2rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .produtos {
