--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav a:hover {
 }
 .card-produto h3 {
     margin: 14px 0 7px 0;
-    color: #ffb400;
+    color: #ff5e00;
 }
 .card-produto p {
     font-size: 1em;
@@ -142,7 +142,7 @@ nav a:hover {
 }
 #caption {
     margin: 0 0 14px 0;
-    color: #ffb400;
+    color: #ff4800;
     font-size: 1.4rem;
 }
 #descricao-produto {
@@ -153,7 +153,7 @@ nav a:hover {
     position: absolute;
     top: 32px;
     right: 65px;
-    color: #fff;
+    color: #ff2903;
     font-size: 42px;
     font-weight: bold;
     cursor: pointer;
